fixed header overflow in profile h2 peoject listing

--- a/app/assets/stylesheets/custom3.css
+++ b/app/assets/stylesheets/custom3.css
@@ -30,7 +30,6 @@ h1 {
 }
 
 h2 {
-  height: 36px;
   font-size: 24px;
 }
 
@@ -338,8 +337,11 @@ p.footer-text {
 }
 
 .profile h2 {
-  height: 54px;
   font-size: 36px;
+}
+
+h2.profile-name {
+  line-height: .9;
 }
 
 .profile span.label {
