--- a/app/assets/stylesheets/custom3/base.scss
+++ b/app/assets/stylesheets/custom3/base.scss
@@ -25,7 +25,8 @@ h1 {
 }
 
 h2 {
-  height: 36px;
+  // This should be a line-height instead.
+  //height: 36px;
   font-size: 24px;
 }
 
